fix(placeholder): just use inline-flex on firefox

--- a/packages/src/styles/index.scss
+++ b/packages/src/styles/index.scss
@@ -21,12 +21,18 @@
     & [data-slate-leaf="true"] {
         &.leaf-with-placeholder {
             position: relative;
-            // Compatible for firefox, there are two problems with using inline-block
-            // Issue-1: paragraph height becomes taller
-            // Issue-2: blocks focus movement on key down
-            display: inline-flex;
+            display: inline-block;
             width: 100%;
         }
+    }
+    &.firefox {
+        // Compatible for firefox, there are two problems with using inline-block
+        // Issue-1: paragraph height becomes taller
+        // Issue-2: blocks focus movement on key down
+        .leaf-with-placeholder {
+            display: inline-flex !important;
+        }
+        
     }
 }
 
